--- a/style.css
+++ b/style.css
@@ -47,9 +47,10 @@ form .display input {
     box-shadow: none;
 }
 
-form input.equal {
+
+/* form input.equal {
     width: 145px;
-}
+} */
 
 form input.operator {
     color: #33ffd8;
